--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <form>
       <input type="text" placeholder="Write to do" />
       <button>Add</button>
+      <button>plus</button>
     </form>
     <ul></ul>
   </body>
